--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<app-header (routeChange)="onRouteChange($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>I'm working!</h2>
+      <app-recipes *ngIf="route === 'recipes'"></app-recipes>
+      <app-shopping-list *ngIf="route === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
