added form handling

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,5 @@
-<a href="#" class="list-group-item clearfix">
+<a [routerLink]="[recipe.id]" routerLinkActive="active"
+class="list-group-item clearfix" style="cursor: pointer;">
   <div class="row">
     <div class="col-xs-8">
       <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
@@ -10,11 +11,4 @@
       </span>
     </div>
   </div>
-  <!-- <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-    <p class="list-group-item-text">{{ recipe.description }}</p>
-  </div> -->
-  <!-- <span class="pull-right">
-    <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 50px;">
-  </span> -->
 </a>
