--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button [routerLink]="['new']" class="btn btn-success">New Recipe</button>
   </div>
 </div>
 <hr>
@@ -9,7 +9,7 @@
     <app-recipe-item 
     *ngFor="let recipeEl of recipes" 
     [recipe]="recipeEl"
-    (click)="onSelectRecipe(recipeEl)">
+    [routerLink]="[recipeEl.id]">
     </app-recipe-item>
   </div>
 </div>
